--- a/src/scss/assets/_colors.scss
+++ b/src/scss/assets/_colors.scss
@@ -2,5 +2,6 @@ $black: #131112;
 $white: #f6f6f6;
 $violet: #c471ed;
 $gradient: linear-gradient(180deg, #12c2e9 -21%, #c471ed 53%, #f64f59 111%);
+$text_gradient: linear-gradient(265deg, #12C2E9 -5%, #C471ED 70%, #F64F59 127%);
 $grey: #2a2d2e;
 $grey2: #252324;
