--- a/src/sections/mobile-menu/mobile-menu.scss
+++ b/src/sections/mobile-menu/mobile-menu.scss
@@ -60,26 +60,18 @@
 
   &__close {
     margin: 0 0 0 auto;
-    &::before {
-      content: '';
-      display: block;
-      padding: 1px;
-      width: 20px;
-      height: 20px;
-      background: center / contain no-repeat;
+    padding: 1px;
+    width: 20px;
+    height: 20px;
+    background: center / contain no-repeat;
+    &:active {
+      transform: scale(.9);
     }
     &.lazyloaded,
-    &:not(.lazy) {
-      &::after,
-      &::before{
-        background-image: url('../img/icon-close.svg');
-      }
+    &:not(.lazy)  {
+      background-image: url('../img/icon-close.svg');
     }
   }
-
-  &__close-svg {}
-
-  &__close-path {}
 
   &__links {
     margin: auto 0 0;
