index hero section

--- a/src/scss/style/buttons/buttons.1280.scss
+++ b/src/scss/style/buttons/buttons.1280.scss
@@ -2,3 +2,15 @@
 @import '../../assets/colors';
 @import '../../assets/mixins';
 @import '../../assets/variables';
+
+
+.btn {
+  font-size: 18px;
+}
+
+.btn-whitepaper {
+  &::after {
+    width: 22px;
+    height: 18px;
+  }
+}
