--- a/src/scss/style/interface/interface.1280.scss
+++ b/src/scss/style/interface/interface.1280.scss
@@ -1,4 +1,19 @@
-
 @import '../../assets/colors';
 @import '../../assets/mixins';
 @import '../../assets/variables';
+
+body {
+  font-size: 16px;
+}
+
+// Sections
+.sect {
+  &-top-text {
+    font-size: 22px;
+  }
+  &-bg {}
+
+  &-title {}
+
+  &-descr {}
+}
