--- a/src/sections/header/header.scss
+++ b/src/sections/header/header.scss
@@ -4,7 +4,7 @@
 
 .hdr {
   padding-top: 18px;
-  padding-bottom: 18px;
+  // padding-bottom: 18px;
   display: flex;
   align-items: center;
   background: $black;
