--- a/src/sections/index-hero/index-hero.576.scss
+++ b/src/sections/index-hero/index-hero.576.scss
@@ -1,3 +1,29 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+.index-hero {
+
+  &__pic {
+  }
+
+  &__text {
+  }
+
+  &__top-text {
+  }
+
+  &__title {
+  }
+
+  &__descr {
+  }
+
+  &__links {
+  }
+
+  &__link {
+    &:first-child {}
+    &:last-child {}
+  }
+}
