index about section

--- a/src/scss/style-index.1280.scss
+++ b/src/scss/style-index.1280.scss
@@ -4,4 +4,6 @@
 @import '../sections/header/header.1280';
 @import '../sections/mobile-menu/mobile-menu.1280';
 @import '../sections/index-hero/index-hero.1280';
+@import '../sections/index-about/index-about.1280';
+@import '../sections/index-perspective/index-perspective.1280';
 @import '../sections/footer/footer.1280';
