--- a/src/scss/style-index.576.scss
+++ b/src/scss/style-index.576.scss
@@ -4,4 +4,6 @@
 @import '../sections/header/header.576';
 @import '../sections/mobile-menu/mobile-menu.576';
 @import '../sections/index-hero/index-hero.576';
+@import '../sections/index-about/index-about.576';
+@import '../sections/index-perspective/index-perspective.576';
 @import '../sections/footer/footer.576';
