--- a/src/scss/style-index.scss
+++ b/src/scss/style-index.scss
@@ -4,4 +4,6 @@
 @import '../sections/header/header';
 @import '../sections/mobile-menu/mobile-menu';
 @import '../sections/index-hero/index-hero';
+@import '../sections/index-about/index-about';
+@import '../sections/index-perspective/index-perspective';
 @import '../sections/footer/footer';
