--- a/src/scss/style-index.1024.scss
+++ b/src/scss/style-index.1024.scss
@@ -4,4 +4,6 @@
 @import '../sections/header/header.1024';
 @import '../sections/mobile-menu/mobile-menu.1024';
 @import '../sections/index-hero/index-hero.1024';
+@import '../sections/index-about/index-about.1024';
+@import '../sections/index-perspective/index-perspective.1024';
 @import '../sections/footer/footer.1024';
