--- a/src/scss/style-index.768.scss
+++ b/src/scss/style-index.768.scss
@@ -4,4 +4,6 @@
 @import '../sections/header/header.768';
 @import '../sections/mobile-menu/mobile-menu.768';
 @import '../sections/index-hero/index-hero.768';
+@import '../sections/index-about/index-about.768';
+@import '../sections/index-perspective/index-perspective.768';
 @import '../sections/footer/footer.768';
