--- a/src/sections/index-about/index-about.576.scss
+++ b/src/sections/index-about/index-about.576.scss
@@ -1,3 +1,24 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+.index-about {
+
+  &__top-text {
+  }
+
+  &__title {
+  }
+
+  &__properties {
+  }
+
+  &__property {
+    &:first-child {}
+    &:nth-child(2) {}
+    &:last-child {}
+  }
+
+  &__descr {
+  }
+}
