--- a/src/sections/index-about/index-about.scss
+++ b/src/sections/index-about/index-about.scss
@@ -1,3 +1,106 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+.index-about {
+  background: -252px -18px no-repeat;
+  position: relative;
+  &.lazyloaded,
+  &:not(.lazy) {
+    background-image: url('../img/honeycomb-bg-mobile.svg'); 
+  }
+  &::before,
+  &::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 140px;
+    background: linear-gradient(180deg, rgba(19, 17, 18, 0) 0%, #131112 77%);
+    pointer-events: none;
+  }
+  &::before {
+    top: 0;
+    transform: rotate(-180deg);
+  }
+  &::after {
+    bottom: 0;
+  }
+  &__top-text {
+    position: relative;
+  }
+
+  &__title {
+    position: relative;
+  }
+
+  &__properties {
+    margin: 80px 0 0 20px;
+    display: flex;
+    flex-flow: column;
+    align-items: flex-start;
+    text-align: center;
+    position: relative;
+    z-index: 1;
+  }
+
+  &__property {
+    width: 155px;
+    position: relative;
+    &::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 215px;
+      height: 212px;
+      background: center / contain no-repeat;
+      transform: translate(-50%, -50%);
+      pointer-events: none;
+    }
+
+    &:first-child {
+      &.lazyloaded,
+      &:not(.lazy) {
+        &::before {
+          background-image: url('../img/hexagon-bg-1.svg');	
+        }
+      }
+    }
+    &:nth-child(2) {
+      margin: 55px 0 0 91px;
+      &.lazyloaded,
+      &:not(.lazy) {
+        &::before {
+          background-image: url('../img/hexagon-bg-2.svg');	
+        }
+      }
+    }
+    &:last-child {
+      margin: 45px 0 0;
+      &.lazyloaded,
+      &:not(.lazy) {
+        &::before {
+          background-image: url('../img/hexagon-bg-3.svg');	
+        }
+      }
+    }
+
+    &-title {
+      display: block;
+      margin: 0 0 10px;
+      background: $text_gradient;
+      background-clip: text;
+      -webkit-background-clip: text;
+      color: transparent;
+      font: bold 28px/1 $mainFont;
+    }
+
+    &-descr {
+
+    }
+  }
+
+  &__descr {
+  }
+}
