--- a/src/scss/style-index.scss
+++ b/src/scss/style-index.scss
@@ -6,4 +6,5 @@
 @import '../sections/index-hero/index-hero';
 @import '../sections/index-about/index-about';
 @import '../sections/index-perspective/index-perspective';
+@import '../sections/index-text-link/index-text-link';
 @import '../sections/footer/footer';
