--- a/src/sections/index-perspective/index-perspective.scss
+++ b/src/sections/index-perspective/index-perspective.scss
@@ -1,3 +1,67 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+.index-perspective {
+
+  &__top-text {}
+
+  &__title {}
+
+  &__items {
+    margin: -20px 0 0;
+  }
+
+  &__item {
+    margin: 60px 0 0 0;
+    display: flex;
+    flex-flow: column;
+
+    &-pic {
+      margin: 0 0 25px;
+      width: 100%;
+      height: responsive('320->575', '198->379');
+    }
+
+    &-img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    &-text {}
+
+    &-title {
+      font: bold 16px/1.5 $mainFont;
+      text-transform: uppercase;
+    }
+
+    &-descr {
+      margin: 10px 0 0;
+    }
+
+    &.odd {
+      .index-perspective__item-pic {}
+
+      .index-perspective__item-img {}
+
+      .index-perspective__item-title {}
+
+      .index-perspective__item-descr {}
+    }
+    &.even {
+      .index-perspective__item-pic {}
+
+      .index-perspective__item-img {}
+
+      .index-perspective__item-title {}
+
+      .index-perspective__item-descr {}
+    }
+  }
+  &__link {
+    margin: 40px auto 0;
+    display: flex;
+    width: 150px;
+    height: 55px;
+  }
+}
