index text and link section

--- a/src/scss/style/interface/interface.1280.scss
+++ b/src/scss/style/interface/interface.1280.scss
@@ -13,7 +13,12 @@ body {
   &-top-text {
     font-size: 22px;
   }
-  &-bg {}
+  &-bg {
+    margin-top: $sectionVerticalPadding1280;
+    margin-bottom: $sectionVerticalPadding1280;
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
 
   &-title {
     font-size: 48px;
