--- a/src/scss/style/interface/interface.scss
+++ b/src/scss/style/interface/interface.scss
@@ -124,7 +124,12 @@ body {
     font: 16px/1.5 $mainFont;
     letter-spacing: 0.05em;
   }
-  &-bg {}
+  &-bg {
+    margin-top: $sectionVerticalPadding320;
+    margin-bottom: $sectionVerticalPadding320;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
 
   &-title {
     font: bold 28px/1.3 $mainFont;
