--- a/src/sections/index-text-link/index-text-link.1280.scss
+++ b/src/sections/index-text-link/index-text-link.1280.scss
@@ -1,3 +1,16 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+.index-lf {
+
+  &__title {
+    margin: auto;
+    max-width: 950px;
+  }
+
+  &__link {
+    margin: 25px 0 0;
+    padding: 20px 35px;
+  }
+}
