--- a/src/sections/index-text-link/index-text-link.768.scss
+++ b/src/sections/index-text-link/index-text-link.768.scss
@@ -1,3 +1,12 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+.index-lf {
+
+  &__title {
+  }
+
+  &__link {
+  }
+}
