--- a/src/sections/index-text-link/index-text-link.scss
+++ b/src/sections/index-text-link/index-text-link.scss
@@ -1,3 +1,15 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+.index-lf {
+  text-align: center;
+  background: linear-gradient(247deg, #12C2E9 17%, #C471ED 69%, #F64F59 108%);
+  &__title {
+  }
+
+  &__link {
+    margin: 40px 0 0;
+    padding: 20px 43px;
+  }
+}
