--- a/src/sections/footer/footer.1280.scss
+++ b/src/sections/footer/footer.1280.scss
@@ -1,3 +1,22 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+.ftr {
+  padding-top: $sectionVerticalPadding1280;
+  padding-bottom: 50px;
+  &__links {
+    margin: 0 0 50px;
+  }
+
+  &__link {
+    width: 40px;
+    height: 40px;
+    &:nth-last-child(n+2) {
+      margin: 0 20px 0 0;
+    }
+  }
+
+  &__copy {
+  }
+}
