index faq section

--- a/src/scss/style-index.scss
+++ b/src/scss/style-index.scss
@@ -7,4 +7,5 @@
 @import '../sections/index-about/index-about';
 @import '../sections/index-perspective/index-perspective';
 @import '../sections/index-text-link/index-text-link';
+@import '../sections/index-faq/index-faq';
 @import '../sections/footer/footer';
