--- a/src/sections/index-faq/index-faq.scss
+++ b/src/sections/index-faq/index-faq.scss
@@ -1,3 +1,88 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+.index-faq {
+
+  &__top-text {
+  }
+
+  &__title {
+  }
+
+  &__whitepaper-block {
+    margin: 40px 0 0;
+  }
+
+  &__descr {
+  }
+
+  &__whitepaper-btn {
+    margin: 25px 0 0;
+    width: 132px;
+    height: 55px;
+  }
+
+  &__list {
+    margin: 50px 0 0;
+  }
+
+  &__item {
+    transition: max-height .5s;
+    will-change: max-height;
+    overflow: hidden;
+    border-bottom: 1px solid #575657;
+
+    &:first-child {
+      border-top: 1px solid #575657;
+    }
+
+    &:nth-last-child(n+2) {}
+  }
+
+  &__item-question {
+    padding: 25px 0;
+    display: flex;
+    align-items: flex-start;
+    font: bold 16px/1.5 $mainFont;
+    text-transform: uppercase;
+    cursor: pointer;
+  }
+
+  &__item-cross {
+    margin: 0 0 0 auto;
+    flex-shrink: 0;
+    width: 20px;
+    height: 20px;
+    position: relative;
+    transition: transform .5s;
+    pointer-events: none;
+
+    &::after,
+    &::before {
+      content: '';
+      position: absolute;
+      background: $gradient;
+    }
+
+    &::after {
+      width: 3px;
+      height: 100%;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    &::before {
+      width: 100%;
+      height: 3px;
+      left: 0;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+  }
+
+  &__item-answer {
+    padding: 0 0 25px;
+  }
+}
