--- a/src/scss/style-index.1280.scss
+++ b/src/scss/style-index.1280.scss
@@ -7,4 +7,5 @@
 @import '../sections/index-about/index-about.1280';
 @import '../sections/index-perspective/index-perspective.1280';
 @import '../sections/index-text-link/index-text-link.1280';
+@import '../sections/index-faq/index-faq.1280';
 @import '../sections/footer/footer.1280';
