--- a/src/scss/style-index.576.scss
+++ b/src/scss/style-index.576.scss
@@ -7,4 +7,5 @@
 @import '../sections/index-about/index-about.576';
 @import '../sections/index-perspective/index-perspective.576';
 @import '../sections/index-text-link/index-text-link.576';
+@import '../sections/index-faq/index-faq.576';
 @import '../sections/footer/footer.576';
