--- a/src/scss/style-index.768.scss
+++ b/src/scss/style-index.768.scss
@@ -7,4 +7,5 @@
 @import '../sections/index-about/index-about.768';
 @import '../sections/index-perspective/index-perspective.768';
 @import '../sections/index-text-link/index-text-link.768';
+@import '../sections/index-faq/index-faq.768';
 @import '../sections/footer/footer.768';
