--- a/src/sections/index-faq/index-faq.1280.scss
+++ b/src/sections/index-faq/index-faq.1280.scss
@@ -1,3 +1,61 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+.index-faq {
+
+  &__top-text {
+  }
+
+  &__title {
+  }
+
+  &__whitepaper-block {
+    margin: 55px 0 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+  }
+
+  &__descr {
+    max-width: 505px;
+    font-size: 22px;
+  }
+
+  &__whitepaper-btn {
+    margin: 0 0 0 auto;
+    width: 214px;
+    height: 61px;
+  }
+
+  &__list {
+    margin: 60px 0 0;
+  }
+
+  &__item {
+    &:nth-last-child(n+2) {}
+  }
+
+  &__item-question {
+    padding: 40px 0;
+    font-size: 22px;
+  }
+
+  &__item-cross {
+    width: 30px;
+    height: 30px;
+    &::after {
+      width: 4px;
+    }
+      
+    &::before {
+      height: 4px;
+    }
+  }
+
+  &__item-answer {
+    padding: 0 0 40px;
+    max-width: 610px;
+  }
+
+}
