--- a/src/scss/style-index.1280.scss
+++ b/src/scss/style-index.1280.scss
@@ -8,4 +8,5 @@
 @import '../sections/index-perspective/index-perspective.1280';
 @import '../sections/index-text-link/index-text-link.1280';
 @import '../sections/index-faq/index-faq.1280';
+@import '../sections/index-contacts/index-contacts.1280';
 @import '../sections/footer/footer.1280';
