--- a/src/scss/style-index.576.scss
+++ b/src/scss/style-index.576.scss
@@ -8,4 +8,5 @@
 @import '../sections/index-perspective/index-perspective.576';
 @import '../sections/index-text-link/index-text-link.576';
 @import '../sections/index-faq/index-faq.576';
+@import '../sections/index-contacts/index-contacts.576';
 @import '../sections/footer/footer.576';
