--- a/src/scss/style-index.768.scss
+++ b/src/scss/style-index.768.scss
@@ -8,4 +8,5 @@
 @import '../sections/index-perspective/index-perspective.768';
 @import '../sections/index-text-link/index-text-link.768';
 @import '../sections/index-faq/index-faq.768';
+@import '../sections/index-contacts/index-contacts.768';
 @import '../sections/footer/footer.768';
