--- a/src/scss/style-index.scss
+++ b/src/scss/style-index.scss
@@ -8,4 +8,5 @@
 @import '../sections/index-perspective/index-perspective';
 @import '../sections/index-text-link/index-text-link';
 @import '../sections/index-faq/index-faq';
+@import '../sections/index-contacts/index-contacts';
 @import '../sections/footer/footer';
