--- a/src/scss/style-research-and-development.1280.scss
+++ b/src/scss/style-research-and-development.1280.scss
@@ -1,4 +1,9 @@
-
 @import 'assets/colors';
 @import 'assets/mixins';
 @import 'assets/variables';
+@import '../sections/header/header.1280';
+@import '../sections/mobile-menu/mobile-menu.1280';
+@import '../sections/research-and-development-hero/research-and-development-hero.1280';
+@import '../sections/research-and-development-descr/research-and-development-descr.1280';
+@import '../sections/research-and-development-projects/research-and-development-projects.1280';
+@import '../sections/footer/footer.1280';
