--- a/src/scss/style-research-and-development.576.scss
+++ b/src/scss/style-research-and-development.576.scss
@@ -1,4 +1,9 @@
-
 @import 'assets/colors';
 @import 'assets/mixins';
 @import 'assets/variables';
+@import '../sections/header/header.576';
+@import '../sections/mobile-menu/mobile-menu.576';
+@import '../sections/research-and-development-hero/research-and-development-hero.576';
+@import '../sections/research-and-development-descr/research-and-development-descr.576';
+@import '../sections/research-and-development-projects/research-and-development-projects.576';
+@import '../sections/footer/footer.576';
