--- a/src/scss/style-research-and-development.scss
+++ b/src/scss/style-research-and-development.scss
@@ -1,4 +1,9 @@
-
 @import 'assets/colors';
 @import 'assets/mixins';
 @import 'assets/variables';
+@import '../sections/header/header';
+@import '../sections/mobile-menu/mobile-menu';
+@import '../sections/research-and-development-hero/research-and-development-hero';
+@import '../sections/research-and-development-descr/research-and-development-descr';
+@import '../sections/research-and-development-projects/research-and-development-projects';
+@import '../sections/footer/footer';
