--- a/src/sections/research-and-development-descr/research-and-development-descr.576.scss
+++ b/src/sections/research-and-development-descr/research-and-development-descr.576.scss
@@ -1,3 +1,12 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+.rd-descr {
+
+  &__title {
+  }
+
+  &__text {
+  }
+}
