--- a/src/sections/research-and-development-descr/research-and-development-descr.scss
+++ b/src/sections/research-and-development-descr/research-and-development-descr.scss
@@ -1,3 +1,15 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+.rd-descr {
+
+  &__title {
+    margin: 0 0 20px;
+  }
+
+  &__text {
+  }
+}
+.container {
+}
