rd projects section

--- a/src/sections/research-and-development-projects/research-and-development-projects.1024.scss
+++ b/src/sections/research-and-development-projects/research-and-development-projects.1024.scss
@@ -1,3 +1,33 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+.rd-projects {
+
+  &__top-text {
+  }
+
+  &__title {
+  }
+
+  &__items {
+  }
+
+  &__item {
+  }
+
+  &__item-pic {
+  }
+
+  &__item-img {
+  }
+
+  &__item-text {
+  }
+
+  &__item-title {
+  }
+
+  &__item-descr {
+  }
+}
