--- a/src/scss/style-research-and-development.768.scss
+++ b/src/scss/style-research-and-development.768.scss
@@ -6,4 +6,7 @@
 @import '../sections/research-and-development-hero/research-and-development-hero.768';
 @import '../sections/research-and-development-descr/research-and-development-descr.768';
 @import '../sections/research-and-development-projects/research-and-development-projects.768';
+@import '../sections/research-and-development-properties/research-and-development-properties.768';
+@import '../sections/research-and-development-more-applications/research-and-development-more-applications.768';
+@import '../sections/title-descr-link/title-descr-link.768';
 @import '../sections/footer/footer.768';
