--- a/src/scss/style-research-and-development.scss
+++ b/src/scss/style-research-and-development.scss
@@ -6,4 +6,7 @@
 @import '../sections/research-and-development-hero/research-and-development-hero';
 @import '../sections/research-and-development-descr/research-and-development-descr';
 @import '../sections/research-and-development-projects/research-and-development-projects';
+@import '../sections/research-and-development-properties/research-and-development-properties';
+@import '../sections/research-and-development-more-applications/research-and-development-more-applications';
+@import '../sections/title-descr-link/title-descr-link';
 @import '../sections/footer/footer';
