--- a/src/scss/style-research-and-development.1024.scss
+++ b/src/scss/style-research-and-development.1024.scss
@@ -6,4 +6,7 @@
 @import '../sections/research-and-development-hero/research-and-development-hero.1024';
 @import '../sections/research-and-development-descr/research-and-development-descr.1024';
 @import '../sections/research-and-development-projects/research-and-development-projects.1024';
+@import '../sections/research-and-development-properties/research-and-development-properties.1024';
+@import '../sections/research-and-development-more-applications/research-and-development-more-applications.1024';
+@import '../sections/title-descr-link/title-descr-link.1024';
 @import '../sections/footer/footer.1024';
