--- a/src/scss/style-research-and-development.576.scss
+++ b/src/scss/style-research-and-development.576.scss
@@ -6,4 +6,7 @@
 @import '../sections/research-and-development-hero/research-and-development-hero.576';
 @import '../sections/research-and-development-descr/research-and-development-descr.576';
 @import '../sections/research-and-development-projects/research-and-development-projects.576';
+@import '../sections/research-and-development-properties/research-and-development-properties.576';
+@import '../sections/research-and-development-more-applications/research-and-development-more-applications.576';
+@import '../sections/title-descr-link/title-descr-link.576';
 @import '../sections/footer/footer.576';
