--- a/src/sections/title-descr-link/title-descr-link.576.scss
+++ b/src/sections/title-descr-link/title-descr-link.576.scss
@@ -1,3 +1,15 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+.buy-sect {
+
+  &__title {
+  }
+
+  &__descr {
+  }
+
+  &__link {
+  }
+}
