--- a/src/sections/title-descr-link/title-descr-link.scss
+++ b/src/sections/title-descr-link/title-descr-link.scss
@@ -1,3 +1,22 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+.buy-sect {
+  background: #252324;
+
+  &__title {
+    margin: 0 0 20px;
+  }
+
+  &__descr {
+  }
+
+  &__link {
+    margin: 40px 0 0;
+    width: 133px;
+    height: 55px;
+    text-transform: uppercase;
+    font-size: 14px;
+  }
+}
