--- a/src/sections/research-and-development-properties/research-and-development-properties.1280.scss
+++ b/src/sections/research-and-development-properties/research-and-development-properties.1280.scss
@@ -1,3 +1,124 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+.rd-properties {
+  position: relative;
+  &__top-text {
+  }
+
+  &__title {
+    margin: 0 0 140px;
+  }
+
+  &__items {
+    margin: 0 0 0 200px;
+    height: 464px;
+    display: flex;
+    align-items: flex-end;
+    transition: transform .5s;
+  }
+
+  &__items-descr {
+    margin: 0;
+    max-width: 435px;
+    position: absolute;
+    right: calc(50vw - 580px);
+    top: 493px;
+    transition: opacity .5s;
+  }
+
+  &__items-prev,
+  &__items-next {
+    width: 36px;
+    height: 15px;
+    display: flex;
+    position: absolute;
+    bottom: 350px;
+    z-index: 1;
+
+    &::before {
+      content: '';
+      width: 10px;
+      height: 10px;
+      position: absolute;
+      top: 50%;
+      right: 0;
+      border: 1px solid $white;
+      transform: translateY(-50%) rotate(45deg);
+      border-bottom: none;
+      border-left: none;
+      pointer-events: none;
+    }
+    &::after {
+      content: '';
+      width: 36px;
+      height: 1px;
+      position: absolute;
+      top: 50%;
+      right: 0;
+      transform: translateY(-50%);
+      background-color: $white;
+      pointer-events: none;
+    }
+  }
+
+  &__items-prev {
+    left: calc(50vw - 580px);
+    transform: rotate(180deg);
+  }
+
+  &__items-next {
+    right: calc(50vw - 580px);
+  }
+
+  &__item {
+    cursor: pointer;
+
+    &:nth-last-child(n+2) {
+      margin: 0 20px 0 0;
+    }
+    &.active {
+      pointer-events: none;
+      .rd-properties__item-pic {
+        // max-width: none;
+        width: 488px;
+        height: 409px;
+      }
+      .rd-properties__item-title {
+        font-size: 22px;
+      }
+      .rd-properties__item-descr {
+        opacity: 1;
+        font-size: 16px;
+        transition: opacity .5s .5s, font-size .5s;
+      }
+    }
+  }
+
+  &__item-pic {
+    display: block;
+    width: 183px;
+    height: 155px;
+    transition: width .5s, height .5s;
+  }
+
+  &__item-img {
+    object-fit: cover;
+  }
+
+  &__item-text {
+    margin: 20px 0 0;
+  }
+
+  &__item-title {
+    transition: font-size .5s;
+  }
+
+  &__item-descr {
+    margin: 10px 0 0;
+    font-size: 0;
+    opacity: 0;
+    transition: opacity .5s, font-size .5s .25s;
+  }
+}
