--- a/src/sections/research-and-development-properties/research-and-development-properties.576.scss
+++ b/src/sections/research-and-development-properties/research-and-development-properties.576.scss
@@ -1,3 +1,36 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+.rd-properties {
+
+  &__top-text {
+  }
+
+  &__title {
+  }
+
+  &__items {
+  }
+
+  &__items-descr {
+  }
+
+  &__item {
+  }
+
+  &__item-pic {
+  }
+
+  &__item-img {
+  }
+
+  &__item-text {
+  }
+
+  &__item-title {
+  }
+
+  &__item-descr {
+  }
+}
