--- a/src/sections/research-and-development-more-applications/research-and-development-more-applications.768.scss
+++ b/src/sections/research-and-development-more-applications/research-and-development-more-applications.768.scss
@@ -1,3 +1,30 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+.rd-more-apps {
+
+  &__top-text {
+  }
+
+  &__title {
+  }
+
+  &__items {
+  }
+
+  &__item {
+  }
+
+  &__item-title {
+  }
+
+  &__item-descr {
+  }
+
+  &__item-pic {
+  }
+
+  &__item-img {
+  }
+}
